--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/public/*": ["./*"]
+      "@/styles/*": ["styles/*"],
+      "@/svgs/*" : ["public/svgs/*"],
+      "@/images/*" : ["public/images/*"],
+      "@/components/*" : ["components/*"]
     }
   }
 }
